# QT

./: README.md
Calculator/: CMakeLists.txt  Calculator.pro  resources.qrc  styles.qss  widget.cpp  widget.h
